--- a/css/metas.css
+++ b/css/metas.css
@@ -16,7 +16,7 @@ p {
 }
 
 .container-educacao {
-    background-color: #2f75d0;
+    background-color: #c800a3;
     margin-right: 40%;
     margin-top: 20px;
     border-radius: 20px;
@@ -24,7 +24,7 @@ p {
 }
 
 .container-laser {
-    background-color: #2f75d0;
+    background-color: #c800a3;
     margin-right: 40%;
     margin-top: 20px;
     border-radius: 20px;
@@ -32,7 +32,7 @@ p {
 }
 
 .container-saude {
-    background-color: #2f75d0;
+    background-color: #c800a3;
     margin-right: 40%;
     margin-top: 20px;
     border-radius: 20px;
@@ -40,7 +40,7 @@ p {
 }
 
 .container-transporte {
-    background-color: #2f75d0;
+    background-color: #c800a3;
     margin-right: 40%;
     margin-top: 20px;
     border-radius: 20px;
@@ -48,7 +48,7 @@ p {
 }
 
 .container-contas-a-pagar {
-    background-color: #2f75d0;
+    background-color: #c800a3;
     margin-right: 40%;
     margin-top: 20px;
     border-radius: 20px;
@@ -56,7 +56,7 @@ p {
 }
 
 .container-mercado {
-    background-color: #2f75d0;
+    background-color: #c800a3;
     margin-right: 40%;
     margin-top:20px;
     border-radius: 20px;
