--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ body{
     border-radius: 50%;
     transform: rotate(calc(360deg / -4 * var(--i)));
     box-shadow: 0 3px 4px rgba(0, 0, 0, 0.15);
-    color: #3ACFEF;
+    color: #393232;
     transition: 0.5s;
 
 }
@@ -57,7 +57,7 @@ body{
     position: absolute;
     width: 60px;
     height: 60px;
-    background: #3ACFEF;
+    background: #393232;
     color: #fff;
     display: flex;
     justify-content: center;
